@@ -10,10 +10,13 @@ Revision history for Perl module Math::Prime::Util
     - powint(a, b)                    signed integer a^b
     - mulint(a, b)                    signed integer a*b
     - addint(a, b)                    signed integer a+b
+    - subint(a,b)                     signed integer a-b
     - divint(a, b)                    signed integer a/b (floor)
     - modint(a, b)                    signed integer a%b (floor)
     - divrem(a, b)                    Euclidean quotient and remainder
     - tdivrem(a, b)                   Truncated quotient and remainder
+    - absint(n)                       integer absolute value
+    - negint(n)                       integer negation
     - is_gaussian_prime(a,b)          is a+bi a Gaussian prime
     - random_safe_prime               for n-bit safe primes
 
